# CESI_A4_MicroserviceSimulation

./: .gitignore  AGENTS.md  DOCKER_USAGE.md  LOGGING.md  README.md  __main__.py  config-test.json  ms  pyproject.toml
.github/instructions/: docker-runtime.instructions.md  python-runtime.instructions.md
.github/skills/run-sanity-simulation/: SKILL.md
.output/: failure_rate_percent_table.csv  mean_cpu_usage_percent_table.csv  mean_response_duration_ms_table.csv  results_tables.txt  schema.json
.output/001/1_monolithic/: README.md  config.json  docker-compose.yml  result_1.csv  (+6 more)
.output/20260505_002524_python/: config.json  results.json
Common/Config/: __init__.py  __main__.py  build.py  cli.py  utils.py
Common/Container/: __main__.py
Common/Microservice/: __main__.py
Common/Service/: __main__.py
Common/Utils/: error.py
Docker/: build.py
Python/: main.py
src/: __main__.py
src/Config/: __init__.py  build.py  cli.py  container_config.py  service_config.py  simulation_config.py  utils.py
src/Docker/: __main__.py  build.py  compose_builder.py  compose_runner.py  platform.py  platform_docker.py  platform_runtime.py  result_io.py  result_plots.py  result_plotting.py  result_table.py
src/Python/: build.py  main.py  platform.py
test_configs/: 1_monolithic.config.json  2_microservices_medium_granularity.config.json  3_microservices_fine_granularity.config.json  4_microservices_medium_granularity_isolation.config.json  5_microservices_fine_granularity_isolation.config.json  6_microservices_fine_granularity_high_isolation.config.json  configs.md
(+638 files in other folders)
